objects/ASI_CRM_Payment_Invoice__c.object
<CustomObject>
    <description>ASI CRM JP - Payment Invoice</description>
    <fields>
        <fullName>ASI_CRM_A_P_Cash_Invoice_Amount__c</fullName>
        <formula>ASI_CRM_Total_Invoice_Amount__c -  ASI_CRM_Rebate_Invoice_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>A&amp;P Cash Invoice Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_A_P_Cash_Tax_Amount__c</fullName>
        <formula>ASI_CRM_A_P_Cash_Invoice_Amount__c -  ASI_CRM_A_P_Cash_Taxable_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>A&amp;P Cash Tax Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_A_P_Cash_Taxable_Amount__c</fullName>
        <formula>ASI_CRM_Total_Taxable_Amount__c -  ASI_CRM_Rebate_Taxable_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>A&amp;P Cash Taxable Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Accounting_Review__c</fullName>
        <formula>ISPICKVAL(ASI_CRM_Status__c , &quot;Verified by SA&quot;) || ( ASI_CRM_No_of_Rebate_Line__c = 0 &amp;&amp; ISPICKVAL(ASI_CRM_Status__c , &quot;Approval In Progress&quot;) )</formula>
        <label>Accounting Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Actual_Amount__c</fullName>
        <label>Actual Amount</label>
        <summarizedField>ASI_CRM_Payment_Invoice_Line_Item__c.ASI_CRM_Actual_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>ASI_CRM_Payment_Invoice_Line_Item__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>JP SPTD FOC Invoice Line Item</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_CRM_Payment_Invoice_Line_Item__c.ASI_CRM_Payment_Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Actual_Taxable_Amount__c</fullName>
        <label>Actual Taxable Amount</label>
        <summarizedField>ASI_CRM_Payment_Invoice_Line_Item__c.ASI_CRM_Final_Amount__c</summarizedField>
        <summaryForeignKey>ASI_CRM_Payment_Invoice_Line_Item__c.ASI_CRM_Payment_Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Adjustment_Amount__c</fullName>
        <label>A&amp;P Adjustment Amount</label>
        <summarizedField>ASI_CRM_Payment_Invoice_Line_Item__c.ASI_CRM_Adjustment_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>ASI_CRM_Payment_Invoice_Line_Item__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>JP SPTD Cash Invoice Line Item</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_CRM_Payment_Invoice_Line_Item__c.ASI_CRM_Payment_Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Approver_10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys_Approver 10</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Payment_Invoices9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys_Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Payment_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys_Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Payment_Invoices1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Clone_Record_Type_Id__c</fullName>
        <label>Clone Record Type Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer_Ship_Pay_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer (Ship To)</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or does not match filter criteria.
Please choose active status of customer records.</errorMessage>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.ASI_CRM_CN_Inactive_Flag__c</field>
                <operation>notEqual</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Payment Invoices</relationshipLabel>
        <relationshipName>Payment_Invoices_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Delivery_Time__c</fullName>
        <label>Delivery Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0000-0000</fullName>
                </value>
                <value>
                    <fullName>0000-1200</fullName>
                </value>
                <value>
                    <fullName>1200-0000</fullName>
                </value>
                <value>
                    <fullName>1400-1600</fullName>
                </value>
                <value>
                    <fullName>1600-1800</fullName>
                </value>
                <value>
                    <fullName>1800-2000</fullName>
                </value>
                <value>
                    <fullName>1900-2100</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Difference_to_Adjust__c</fullName>
        <formula>ASI_CRM_Total_Taxable_Amount__c  - ASI_CRM_Actual_Taxable_Amount__c</formula>
        <label>Difference to Adjust</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_From_Month__c</fullName>
        <label>Invoice Period From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_G_L_Date__c</fullName>
        <label>G/L Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Invoice_No__c</fullName>
        <label>Invoice No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JDE_Document_No__c</fullName>
        <label>JDE Document No.</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JDE_Group_Name__c</fullName>
        <label>JDE Group Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JDE_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>JDE Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Journal_Voucher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Journal Voucher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Line_Total_Amount__c</fullName>
        <formula>ASI_CRM_Actual_Taxable_Amount__c* (1+ASI_CRM_Tax_Rate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Total Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_No_of_A_P_Line__c</fullName>
        <label>No. of A&amp;P/SPTD Line</label>
        <summaryFilterItems>
            <field>ASI_CRM_Payment_Invoice_Line_Item__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>JP SPTD Cash Invoice Line Item</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_CRM_Payment_Invoice_Line_Item__c.ASI_CRM_Payment_Invoice__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_No_of_Lines_A_P_Vs_Rebate__c</fullName>
        <formula>Text(ASI_CRM_No_of_A_P_Line__c) &amp; &quot; / &quot; &amp; Text(ASI_CRM_No_of_Rebate_Line__c)</formula>
        <label>No. of Lines (A&amp;P / Rebate)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_No_of_Rebate_Line__c</fullName>
        <label>No. of Rebate Line</label>
        <summaryFilterItems>
            <field>ASI_CRM_Payment_Invoice_Line_Item__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>JP Indirect Rebate Invoice Line Item</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_CRM_Payment_Invoice_Line_Item__c.ASI_CRM_Payment_Invoice__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Order_Date__c</fullName>
        <formula>ASI_CRM_Payment_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Owner__c</fullName>
        <formula>Owner:User.LastName + &quot; &quot; + Owner:User.FirstName</formula>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Pay_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pay To</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_CRM_Pay_To__c.ASI_CRM_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_Pay_To__c</referenceTo>
        <relationshipLabel>Payment Invoices</relationshipLabel>
        <relationshipName>Payment_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Payment_Invoice_External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Payment Invoice External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_Rebate_Adjustment_Amount__c</fullName>
        <label>Rebate Adjustment Amount</label>
        <summarizedField>ASI_CRM_Payment_Invoice_Line_Item__c.ASI_CRM_Adjustment_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>ASI_CRM_Payment_Invoice_Line_Item__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>JP Indirect Rebate Invoice Line Item</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_CRM_Payment_Invoice_Line_Item__c.ASI_CRM_Payment_Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Rebate_Invoice_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Rebate Invoice Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Rebate_Tax_Amount__c</fullName>
        <formula>IF( ASI_CRM_No_of_A_P_Line__c = 0 &amp;&amp; ASI_CRM_Rebate_Taxable_Amount__c == ASI_CRM_Total_Taxable_Amount__c ,  ASI_CRM_Total_Tax_Amount__c , ASI_CRM_Rebate_Invoice_Amount__c - ASI_CRM_Rebate_Taxable_Amount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rebate Tax Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Rebate_Taxable_Amount__c</fullName>
        <label>Rebate Taxable Amount</label>
        <summarizedField>ASI_CRM_Payment_Invoice_Line_Item__c.ASI_CRM_Final_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>ASI_CRM_Payment_Invoice_Line_Item__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>JP Indirect Rebate Invoice Line Item</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_CRM_Payment_Invoice_Line_Item__c.ASI_CRM_Payment_Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Reject_Reason__c</fullName>
        <label>Reject Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Remarks_Notes__c</fullName>
        <formula>&quot;Remarks is maximum 19 digits and please use katakana, alphabet and numbers.&quot; &amp; BR() &amp; &quot;備考欄は最大19桁まで。半角カタカナ、英数で入力ください。&quot;</formula>
        <label>* Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sales_Group__c</fullName>
        <label>Sales Group</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Staff_Code__c</fullName>
        <formula>Owner:User.ASI_TnE_Sub_Ledger__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Staff Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approval In Progress</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Shipment Cancelled</fullName>
                </value>
                <value>
                    <fullName>Partial Complete</fullName>
                </value>
                <value>
                    <fullName>Verified by SA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Allow_Set_Draft__c</fullName>
        <formula>IF( CONTAINS($Setup.ASI_JP_Validation_Bypass__c.ASI_JP_Object_API__c, &apos;ASI_CRM_Payment_Invoice__c&apos; ) &amp;&amp; ( ISBLANK( $Setup.ASI_JP_Validation_Bypass__c.ASI_JP_Record_Type__c ) || CONTAINS($Setup.ASI_JP_Validation_Bypass__c.ASI_JP_Record_Type__c , RecordType.DeveloperName ) ), $Setup.ASI_JP_Validation_Bypass__c.ASI_JP_Bybass_Validation__c , false)</formula>
        <label>Sys_Allow Set Draft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Allow_Submit_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sys_Allow Submit Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Current_Approver__c</fullName>
        <label>Sys Current Approver</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Next_Auto_Number__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Sys Next Auto Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Tax_Rate_Area__c</fullName>
        <label>Tax Rate/Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CP0</fullName>
                </value>
                <value>
                    <fullName>CP8</fullName>
                </value>
                <value>
                    <fullName>CP8R</fullName>
                </value>
                <value>
                    <fullName>CP10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Tax_Rate__c</fullName>
        <inlineHelpText>If Tax Rate is empty, system will automatically calculate the Tax with default setting.</inlineHelpText>
        <label>Tax Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_To_Month__c</fullName>
        <label>Invoice Period To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Invoice_Amount__c</fullName>
        <label>Total Invoice Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Tax_Amount__c</fullName>
        <formula>ASI_CRM_Total_Invoice_Amount__c -  ASI_CRM_Total_Taxable_Amount__c</formula>
        <label>Total Tax Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Taxable_Amount__c</fullName>
        <formula>IF( CONTAINS(RecordType.DeveloperName, &quot;ASI_CRM_JP_SPTD_Cash_Invoice&quot;) || CONTAINS(RecordType.DeveloperName, &quot;ASI_CRM_JP_Cash_Invoice&quot;)  , ROUND(ASI_CRM_Total_Invoice_Amount__c /(1+ ASI_CRM_Tax_Rate__c), 0),  ASI_CRM_Actual_Taxable_Amount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Taxable Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Payment Invoice</label>
    <listViews>
        <fullName>ASI_CRM_JP_All_Invoices</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4 OR 5</booleanFilter>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>ASI_CRM_Customer_Ship_Pay_To__c</columns>
        <columns>ASI_CRM_Pay_To__c</columns>
        <columns>ASI_CRM_Invoice_No__c</columns>
        <columns>ASI_CRM_Invoice_Date__c</columns>
        <columns>ASI_CRM_Payment_Date__c</columns>
        <columns>ASI_CRM_Owner__c</columns>
        <columns>ASI_CRM_No_of_A_P_Line__c</columns>
        <columns>ASI_CRM_No_of_Rebate_Line__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Payment_Invoice__c.ASI_CRM_JP_SPTD_Cash_Invoice,ASI_CRM_Payment_Invoice__c.ASI_CRM_JP_SPTD_Cash_Invoice_Read_Only</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Payment_Invoice__c.ASI_CRM_JP_SPTD_FOC_Invoice,ASI_CRM_Payment_Invoice__c.ASI_CRM_JP_SPTD_FOC_Invoice_Read_Only</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Payment_Invoice__c.ASI_CRM_JP_Indirect_Rebate_Invoice,ASI_CRM_Payment_Invoice__c.ASI_CRM_JP_Indirect_Rebate_Invoice_Read_Only</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Payment_Invoice__c.ASI_CRM_JP_Cash_Invoice,ASI_CRM_Payment_Invoice__c.ASI_CRM_JP_Cash_Invoice_Read_Only</value>
        </filters>
        <filters>
            <field>ASI_CRM_Status__c</field>
            <operation>equals</operation>
            <value>Approved,Complete</value>
        </filters>
        <label>All JP Invoices</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_JP_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_JP_Cash_Invoice_for_Accounting_Review</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>ASI_CRM_Reject_Reason__c</columns>
        <columns>ASI_CRM_Pay_To__c</columns>
        <columns>ASI_CRM_Invoice_No__c</columns>
        <columns>ASI_CRM_Invoice_Date__c</columns>
        <columns>ASI_CRM_Payment_Date__c</columns>
        <columns>ASI_CRM_G_L_Date__c</columns>
        <columns>ASI_CRM_Journal_Voucher__c</columns>
        <columns>ASI_CRM_Total_Invoice_Amount__c</columns>
        <columns>ASI_CRM_Difference_to_Adjust__c</columns>
        <columns>ASI_CRM_Tax_Rate__c</columns>
        <columns>ASI_CRM_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Payment_Invoice__c.ASI_CRM_JP_Cash_Invoice_Read_Only</value>
        </filters>
        <filters>
            <field>ASI_CRM_Accounting_Review__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>JP Cash Invoice for Accounting Review</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_JP_Accounting</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_JP_Cash_Invoice_for_SA_Review</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>ASI_CRM_Reject_Reason__c</columns>
        <columns>ASI_CRM_Pay_To__c</columns>
        <columns>ASI_CRM_Invoice_No__c</columns>
        <columns>ASI_CRM_Invoice_Date__c</columns>
        <columns>ASI_CRM_Payment_Date__c</columns>
        <columns>ASI_CRM_Total_Invoice_Amount__c</columns>
        <columns>ASI_CRM_Difference_to_Adjust__c</columns>
        <columns>ASI_CRM_Tax_Rate__c</columns>
        <columns>ASI_CRM_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Payment_Invoice__c.ASI_CRM_JP_Cash_Invoice_Read_Only</value>
        </filters>
        <filters>
            <field>ASI_CRM_Status__c</field>
            <operation>equals</operation>
            <value>Approval In Progress</value>
        </filters>
        <filters>
            <field>ASI_CRM_No_of_Rebate_Line__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>JP Cash Invoice for SA Review</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_JP_Sales_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_JP_Ind_Rebate_Invoice_Review</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>ASI_CRM_Pay_To__c</columns>
        <columns>ASI_CRM_Invoice_No__c</columns>
        <columns>ASI_CRM_Invoice_Date__c</columns>
        <columns>ASI_CRM_Payment_Date__c</columns>
        <columns>ASI_CRM_Tax_Rate__c</columns>
        <columns>ASI_CRM_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Payment_Invoice__c.ASI_CRM_JP_Indirect_Rebate_Invoice_Read_Only</value>
        </filters>
        <filters>
            <field>ASI_CRM_Status__c</field>
            <operation>equals</operation>
            <value>Approval In Progress</value>
        </filters>
        <label>JP Indirect Rebate Invoice for Review</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_JP_Sales_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_JP_My_Invoices</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>ASI_CRM_Customer_Ship_Pay_To__c</columns>
        <columns>ASI_CRM_Pay_To__c</columns>
        <columns>ASI_CRM_Invoice_No__c</columns>
        <columns>ASI_CRM_Invoice_Date__c</columns>
        <columns>ASI_CRM_Payment_Date__c</columns>
        <columns>ASI_CRM_Owner__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Payment_Invoice__c.ASI_CRM_JP_SPTD_Cash_Invoice,ASI_CRM_Payment_Invoice__c.ASI_CRM_JP_SPTD_Cash_Invoice_Read_Only</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Payment_Invoice__c.ASI_CRM_JP_SPTD_FOC_Invoice,ASI_CRM_Payment_Invoice__c.ASI_CRM_JP_SPTD_FOC_Invoice_Read_Only</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Payment_Invoice__c.ASI_CRM_JP_Indirect_Rebate_Invoice,ASI_CRM_Payment_Invoice__c.ASI_CRM_JP_Indirect_Rebate_Invoice_Read_Only</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Payment_Invoice__c.ASI_CRM_JP_Cash_Invoice,ASI_CRM_Payment_Invoice__c.ASI_CRM_JP_Cash_Invoice_Read_Only</value>
        </filters>
        <label>My JP Invoices</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_JP_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_JP_SPTD_Cash_Invoice_for_Review</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>ASI_CRM_Reject_Reason__c</columns>
        <columns>ASI_CRM_Pay_To__c</columns>
        <columns>ASI_CRM_Invoice_No__c</columns>
        <columns>ASI_CRM_Invoice_Date__c</columns>
        <columns>ASI_CRM_Payment_Date__c</columns>
        <columns>ASI_CRM_G_L_Date__c</columns>
        <columns>ASI_CRM_Journal_Voucher__c</columns>
        <columns>ASI_CRM_Total_Invoice_Amount__c</columns>
        <columns>ASI_CRM_Difference_to_Adjust__c</columns>
        <columns>ASI_CRM_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Payment_Invoice__c.ASI_CRM_JP_SPTD_Cash_Invoice_Read_Only</value>
        </filters>
        <filters>
            <field>ASI_CRM_Status__c</field>
            <operation>equals</operation>
            <value>Approval In Progress</value>
        </filters>
        <filters>
            <field>ASI_CRM_Difference_to_Adjust__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>JP SPTD Cash Invoice for Review</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_JP_Accounting</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>JP_Cash_Invoice_Approved_Final</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>ASI_CRM_Reject_Reason__c</columns>
        <columns>ASI_CRM_Pay_To__c</columns>
        <columns>ASI_CRM_Invoice_No__c</columns>
        <columns>ASI_CRM_Invoice_Date__c</columns>
        <columns>ASI_CRM_Payment_Date__c</columns>
        <columns>ASI_CRM_G_L_Date__c</columns>
        <columns>ASI_CRM_Journal_Voucher__c</columns>
        <columns>ASI_CRM_Total_Invoice_Amount__c</columns>
        <columns>ASI_CRM_Difference_to_Adjust__c</columns>
        <columns>ASI_CRM_Tax_Rate__c</columns>
        <columns>ASI_CRM_Owner__c</columns>
        <columns>ASI_CRM_No_of_A_P_Line__c</columns>
        <columns>ASI_CRM_No_of_Rebate_Line__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Payment_Invoice__c.ASI_CRM_JP_Cash_Invoice_Read_Only</value>
        </filters>
        <filters>
            <field>ASI_CRM_Status__c</field>
            <operation>equals</operation>
            <value>Approved,Final</value>
        </filters>
        <label>JP Cash Invoice_Approved_Final</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_JP_Accounting</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>JP_Grouped_Payment</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>ASI_CRM_Reject_Reason__c</columns>
        <columns>ASI_CRM_Pay_To__c</columns>
        <columns>ASI_CRM_Invoice_No__c</columns>
        <columns>ASI_CRM_Invoice_Date__c</columns>
        <columns>ASI_CRM_Payment_Date__c</columns>
        <columns>ASI_CRM_G_L_Date__c</columns>
        <columns>ASI_CRM_Journal_Voucher__c</columns>
        <columns>ASI_CRM_Total_Invoice_Amount__c</columns>
        <columns>ASI_CRM_Difference_to_Adjust__c</columns>
        <columns>ASI_CRM_JDE_Group_Name__c</columns>
        <columns>ASI_CRM_Tax_Rate__c</columns>
        <columns>ASI_CRM_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Payment_Invoice__c.ASI_CRM_JP_SPTD_Cash_Invoice_Read_Only,ASI_CRM_Payment_Invoice__c.ASI_CRM_JP_Cash_Invoice_Read_Only</value>
        </filters>
        <filters>
            <field>ASI_CRM_JDE_Group_Name__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>JP Grouped Payment</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_JP_Accounting</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Payment Invoice Ref No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Invoices</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_JP_Cash_Invoice</fullName>
        <active>true</active>
        <label>JP Cash Invoice</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_JP_Cash_Invoice_Read_Only</fullName>
        <active>true</active>
        <label>JP Cash Invoice Read-Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_JP_Indirect_Rebate_Invoice</fullName>
        <active>true</active>
        <label>JP Indirect Rebate Invoice</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_JP_Indirect_Rebate_Invoice_Read_Only</fullName>
        <active>true</active>
        <label>JP Indirect Rebate Invoice Read-Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_JP_SPTD_Cash_Invoice</fullName>
        <active>true</active>
        <label>JP SPTD Cash Invoice</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_JP_SPTD_Cash_Invoice_Read_Only</fullName>
        <active>true</active>
        <label>JP SPTD Cash Invoice Read-Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_JP_SPTD_FOC_Invoice</fullName>
        <active>true</active>
        <label>JP SPTD FOC Invoice</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_JP_SPTD_FOC_Invoice_Read_Only</fullName>
        <active>true</active>
        <label>JP SPTD FOC Invoice Read-Only</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ASI_CRM_JP_Cant_Change_Back_Draft</fullName>
        <active>true</active>
        <errorConditionFormula>/* Prevent user changing Cancelled Invoice back to Draft status. 

Criteria:
* Record Type match all JP CRM record types, but not read-only
* Status previous value is Cancelled
* Status current value is Draft

Remark: this validation rule should not bypass any user to ensure data integrity.  
*/

OR(RecordType.DeveloperName = &apos;ASI_CRM_JP_Indirect_Rebate_Invoice&apos;, RecordType.DeveloperName = &apos;ASI_CRM_JP_SPTD_Cash_Invoice&apos;, RecordType.DeveloperName = &apos;ASI_CRM_JP_SPTD_FOC_Invoice&apos;, RecordType.DeveloperName = &apos;ASI_CRM_JP_Cash_Invoice&apos;) &amp;&amp;  ISPICKVAL( ASI_CRM_Status__c , &apos;Draft&apos;) &amp;&amp; ISPICKVAL(PRIORVALUE(ASI_CRM_Status__c),&quot;Cancelled&quot;)</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Status__c</errorDisplayField>
        <errorMessage>You are NOT allowed to change back Status from Cancelled</errorMessage>
    </validationRules>
</CustomObject>